tests/compile_fail/unknown_list_pattern_attr.stderr
error: unknown list_pattern attribute 'unknown_pattern'. Valid attributes are: repeat, fixed, repeat_tuple, repeat_template, repeat_tuple_template
  --> tests/compile_fail/unknown_list_pattern_attr.rs:10:20
   |
10 |     #[list_pattern(unknown_pattern)]
   |                    ^^^^^^^^^^^^^^^
